With External JS file

--- a/promisePrj.html
+++ b/promisePrj.html
@@ -30,94 +30,8 @@
 <p><strong>Post Title Selected:</strong></p>
 <div id="postTitle"></div>
 
-  <script>
-// BUTTON
-var newUserObj;
-var indexI = newUserObj
-console.log(indexI)
-console.log(newUserObj)
-let guessValue;
-let getUsers = () => {
-  guessValue = document.getElementById('guessInput').value;
-
-  $.get("http://jsonplaceholder.typicode.com/users", (data)=>{
-    console.log(data);
-    let newUserObj = data.find((user) => {
-        return user.username === guessValue;
-    })
-    var brettsID="";
-    $.get('http://jsonplaceholder.typicode.com/users', function(data){
-      brettsID = data[newUserObj.id-1].username;
-
-      let userName = document.getElementById("userName");
-
-        if (guessValue == brettsID){
-          userName.innerHTML = data[newUserObj.id-1].username
-        } else {
-          userName.innerHTML = 'Wrong User';
-          }
-
-      });
-      function please (result) {
-          try {
-            if ((newUserObj == undefined)) {
-               throw ('New exception');
-            }
-          } catch (err) {
-            userName.innerHTML = 'Wrong User LOOK IM AN ERROR MESSAGE!'
-          };
-      }
-please()
-    let userEl = document.getElementById("name")
-    $.get('http://jsonplaceholder.typicode.com/users', function(data){
-      console.log(data[newUserObj.id-1].name);
-      userEl.innerHTML = data[newUserObj.id-1].name
-        });
-
-    let albumEl = document.getElementById("albumTitle")
-    $.get('http://jsonplaceholder.typicode.com/albums', function(data){
-      console.log(data[newUserObj.id-1].title);
-      albumEl.innerHTML = data[newUserObj.id-1].title
-    });
-
-    let postEl = document.getElementById("postTitle")
-    $.get('http://jsonplaceholder.typicode.com/posts', function(data){
-      console.log(data[newUserObj.id-1].title);
-      postEl.innerHTML = data[newUserObj.id-1].title
-    });
-    console.log(newUserObj.id)
-  })
-
-}
-
-
-
-// success: function (result) {
-//     try {
-//       result = jQuery.parseJSON(result);
-//
-//       if (!result.data.email) {
-//          throw ('New exception');
-//       }
-//       console.log(result);
-//       jQuery('.email').html(result.data.email);
-//     } catch (exception) {
-//       console.error("bla");
-//     };
-// }
-
-
-
-
-  </script>
-
-
-
-
-
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+  <script src="./promises.js"></script> 
 </body>
 </html>
